Texture baking with shadow sampling leads to nondeterministic results (blender internal engine) #44598

Closed
opened 2015-05-04 10:38:54 +02:00 by Fabian Emmes · 13 comments

System Information
Archlinux, Sandy Bridge I5.

Blender Version
Broken: 2.74

Short description of error
Baking the same texture twice leads to different results.

Exact steps for others to reproduce the error

  1. Open baking.blend.
  2. Press "Bake" in render Panel.
  3. Look at generated texture.
  4. Press "Bake" again.
  5. Notice how texture changed.
**System Information** Archlinux, Sandy Bridge I5. **Blender Version** Broken: 2.74 **Short description of error** Baking the same texture twice leads to different results. **Exact steps for others to reproduce the error** 1. Open [baking.blend](https://archive.blender.org/developer/F169927/baking.blend). 2. Press "Bake" in render Panel. 3. Look at generated texture. 4. Press "Bake" again. 5. Notice how texture changed.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @der_fab

Added subscriber: @der_fab

Added subscriber: @mont29

Added subscriber: @mont29

Added subscriber: @Sergey

Added subscriber: @Sergey

Can confirm the issue, but not sure it is expected to be deterministic? Sergey, maybe you know? To me, there is no real reason to make it so here, and it would probably be harder to do too, deterministic reproducible randomness in multi-threaded context is rather hairy afaik…

Can confirm the issue, but not sure it is expected to be deterministic? Sergey, maybe you know? To me, there is no real reason to make it so here, and it would probably be harder to do too, deterministic reproducible randomness in multi-threaded context is rather hairy afaik…

Also, note that this is not really related to baking imho, this is valid for any render. This is just highly noticeable here because of very low res.

Also, note that this is not really related to baking imho, this is valid for any render. This is just highly noticeable here because of very low res.
Author

No, the normal render produces deterministic results, for every test I did (including this example). So I think this is baking specific.

No, the normal render produces deterministic results, for every test I did (including this example). So I think this is baking specific.

Ack, yes, you are right, regular renders seems to produce same result always (at least with same amount of threads - changing that changes result)… So guess there is something wrong in handling of randomness in baking.

Ack, yes, you are right, regular renders seems to produce same result always (at least with same amount of threads - changing that changes result)… So guess there is something wrong in handling of randomness in baking.

This issue was referenced by e73f1035d7

This issue was referenced by e73f1035d7e544f83cadceb5a44acfa1e9fb1921

Added subscriber: @brecht

Added subscriber: @brecht

Thanks for the report, fixed now.

Thanks for the report, fixed now.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e73f1035d7.

Closed by commit e73f1035d7.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44598
No description provided.