Fix T44598: blender internal not giving same result on repeated texture bakes.